# ApoloBilling

./: .env  .gitignore  0306-main.py  ACTUALIZACION_LOCAL.md  CLAUDE.md  CONFIGURAR_PYTHON311_Y_VERIFICAR_DB.md  CORRECCION_ERRORES.md  DATABASE_ANALYSIS.md  DEPLOYMENT_GUIDE_WSL.md  DESPLIEGUE_RESUMEN.txt  ESL_SERVER_MODE_SOLUTION.txt  FINAL_RATE_FIX_INSTRUCTIONS.txt  FIX_ENV_CONFIGURATION.txt  FIX_FRONTEND_CDR_DISPLAY.md  FRONTEND_CLEANUP_SUMMARY.txt  GITHUB_DEPLOYMENT_GUIDE.md  HOTFIX_INSTRUCCIONES.txt  IMPLEMENTATION_IMPROVEMENTS.md  INSTRUCCIONES_CREAR_CUENTA.txt  INSTRUCCIONES_RAPIDAS.txt  LEGACY_CLEANUP_COMPLETED.md  MIGRATION_PLAN_RATE_CARDS.md  PLAN.md  PLAN_VALIDACION_MULTI_AGENTE.md  PRD.md  PRD_ApoloBilling_Technical.md  PRD_COMPLETO_APOLO_BILLING.md  QUICKSTART.md  README.md  README_DEPLOYMENT.md  RESERVATION_FIX_FINAL.txt  RESUMEN_ACTUALIZACION_GITHUB.txt  RESUMEN_EJECUTIVO_ENTREGABLES.md  RESUMEN_FINAL_ESL_SERVER.txt  RESUMEN_FINAL_FIX_v2.0.5.txt  SCHEMA_VERIFICATION.md  SISTEMA_100_FUNCIONAL.md  TESTING_BILLING_ENGINE.md  TESTING_COMPLETO_EXITOSO.txt  TIMESTAMP_FIX_FINAL.txt  (+33 more)
.github/workflows/: README.md  ci.yml  deploy.yml  security.yml
app/models/: cdr.py
backend/: .env  .env.example  apolo_billing.db  debug_rate_query.py  fix_rates.py  fix_rates_sync.py  init_db_clean.py  main.py  requirements.txt  verify_imports.py  verify_rating.py
backend/tests/: esl_simulator.py
cdr/: __init__.py  dashboard.py  exports.py  models.py  router.py  schemas.py  service.py
connectors/freeswitch/: esl_listener.py  mock_freeswitch.py
docs/: CGRATES_INTEGRATION_ANALYSIS.md
frontend/: FILE_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
java_listener/: config.properties  pom.xml  start.sh
migrations/: 002_add_plans_table.sql
rust-backend/: .env  .env.example  Cargo.toml
rust-backend/crates/apolo-api/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md
rust-backend/crates/apolo-api/benches/: cdr_benchmarks.rs
rust-backend/crates/apolo-api/examples/: cdr_api_usage.rs
rust-backend/crates/apolo-api/src/: lib.rs
rust-backend/crates/apolo-api/src/dto/: account.rs  active_call.rs  audit.rs  auth.rs  cdr.rs  common.rs  management.rs  mod.rs  plan.rs  rate_card.rs  stats.rs  user.rs
rust-backend/crates/apolo-api/src/handlers/: account.rs  active_call.rs  audit.rs  auth.rs  cdr.rs  dashboard.rs  management.rs  mod.rs  plan.rs  rate.rs  rate_card.rs  reservation.rs  stats.rs  user.rs  ws.rs
rust-backend/crates/apolo-api/tests/: cdr_handlers_test.rs
rust-backend/crates/apolo-auth/: Cargo.toml
rust-backend/crates/apolo-auth/examples/: gen_hash.rs
rust-backend/crates/apolo-auth/src/: claims.rs  jwt.rs  lib.rs  middleware.rs  password.rs
rust-backend/crates/apolo-cache/: Cargo.toml
rust-backend/crates/apolo-cache/src/: keys.rs  lib.rs
rust-backend/crates/apolo-core/: Cargo.toml
rust-backend/crates/apolo-core/src/: config.rs  error.rs  lib.rs  traits.rs
rust-backend/crates/apolo-core/src/models/: account.rs  audit.rs  cdr.rs  mod.rs  plan.rs  rate.rs  reservation.rs  user.rs  zone.rs
rust-backend/crates/apolo-db/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
rust-backend/crates/apolo-db/src/: lib.rs  pool.rs
rust-backend/crates/apolo-db/src/repositories/: account_repo.rs  audit_repo.rs  cdr_repo.rs  mod.rs  plan_repo.rs  rate_repo.rs  reservation_repo.rs  user_repo.rs
rust-backend/crates/apolo-esl/: Cargo.toml
rust-backend/crates/apolo-esl/src/: event.rs  lib.rs
rust-backend/crates/apolo-services/: Cargo.toml
rust-backend/crates/apolo-services/src/: billing_sync.rs  lib.rs  rating.rs  reservation_manager.rs
rust-backend/src/: main.rs
rust-billing-engine/: .env  .env.example  Cargo.toml  Dockerfile  test.rb
rust-billing-engine/docs/: CALL_SIMULATOR.md
rust-billing-engine/scripts/: test_simulator.sh
rust-billing-engine/src/: config.rs  error.rs  main.rs
rust-billing-engine/src/api/: handlers.rs  mod.rs  routes.rs
rust-billing-engine/src/cache/: mod.rs  redis_client.rs
rust-billing-engine/src/cgrates/: accounts.rs  client.rs  mod.rs  ratings.rs  sessions.rs  types.rs
rust-billing-engine/src/database/: mod.rs  pool.rs
rust-billing-engine/src/esl/: client.rs  connection.rs  event.rs  event_handler.rs  mod.rs  server.rs
rust-billing-engine/src/models/: account.rs  cdr.rs  mod.rs  rate.rs  reservation.rs
rust-billing-engine/src/services/: authorization.rs  call_simulator.rs  cdr_generator.rs  mod.rs  realtime_biller.rs  reservation_manager.rs
rust-billing-engine/tests/: esl_simulator.rs  full_integration_test.rs  integration_test.rs
rust-billing-engine/tests/sql/: setup_test_schema.sql
static/css/: styles.css
static/js/: Spanish.json  monitor-system.js  rate_cards.js  realtime.js
static/templates/: recarga_masiva_template.csv
templates/: accounts.html  base.html  carga_masiva_anexos.html  cucm_config.html  dashboard_abonados.html  dashboard_anexos.html  dashboard_auditoria.html  dashboard_cdr.html  dashboard_cucm.html  dashboard_estadisticas_zona.html  dashboard_fac.html  dashboard_fac_historial.html  dashboard_fac_sync.html  dashboard_finanzas.html  dashboard_lineas.html  dashboard_pines.html  dashboard_planes.html  dashboard_prefijos.html  dashboard_ranking_consumo.html  dashboard_rate_cards.html  dashboard_recargas.html  dashboard_saldo.html  dashboard_tarifas.html  dashboard_zonas.html  fac_pins_management.html  login.html  metrics.html  monitoreo.html  pbx_config.html  rates.html  recarga_masiva.html  register.html
templates/components/: llamadas_activas.html
tests/: README.md  __init__.py  conftest.py  run_all_agents.py  test_agent_1_navigation.py  test_agent_2_crud.py
tools/: README.md  create_test_account.sh  create_test_account.sql  create_test_rate.sql  diagnose_and_fix_account.sh  esl_simulator.py  fix_account_100001.sql  fix_account_100001_v2.sql  fix_account_100001_v3.sql  reset_database.sh  setup_apolo_billing_complete.sql  test_billing_engine.sh
(+55 files in other folders)
