[package]
name = "apolo-billing-engine"
version = "1.0.0"
edition = "2021"
authors = ["Jesús <jesus@apolo-billing.com>"]

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Decimal precision
rust_decimal = { version = "1.36", features = ["maths", "serde", "db-tokio-postgres"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = "0.12"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde", "v7"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Config
dotenv = "0.15"

# Utilities
bytes = "1.5"
once_cell = "1.19"
rand = "0.8"

# TLS support
tokio-native-tls = "0.3"
native-tls = "0.2"

# Async traits
async-trait = "0.1"

# HTTP Client (for CGRateS JSON-RPC)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Hostname detection
hostname = "0.3"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
rust_decimal_macros = "1.36"
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
reqwest = { version = "0.11", features = ["json"] }
