[package]
name = "apolo-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Authentication and authorization for ApoloBilling"

[dependencies]
apolo-core = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

# Password hashing
argon2 = { workspace = true }
rand_core = { version = "0.6", features = ["std"] }

# Web framework
actix-web = { workspace = true }
futures = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# DateTime
chrono = { workspace = true }

# Tracing
tracing = { workspace = true }

[[bin]]
name = "gen_hash"
path = "../../gen_hash.rs"
